--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = esp32-c6-devkitc-1
 framework = arduino
-lib_deps = knolleary/PubSubClient@^2.8
+lib_deps = 
+	knolleary/PubSubClient@^2.8
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
