--- a/platformio.ini
+++ b/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_deps = 
 	knolleary/PubSubClient@^2.8
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	adafruit/Adafruit BME680 Library@^2.0.5
