--- a/platformio.ini
+++ b/platformio.ini
@@ -16,3 +16,4 @@ lib_deps =
 	knolleary/PubSubClient@^2.8
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	adafruit/Adafruit BME680 Library@^2.0.5
+	bblanchon/ArduinoJson@^7.4.1
