--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	adafruit/Adafruit BME680 Library@^2.0.5
 	bblanchon/ArduinoJson@^7.4.1
+	claws/BH1750@^1.3.0
